--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.1",
-	"appid": "wx974ee30105dbd22c",
+	"appid": "wx5985bb6881a070f4",
 	"projectname": "wx_demo",
 	"isGameTourist": false,
 	"condition": {
