--- a/app.json
+++ b/app.json
@@ -2,12 +2,35 @@
   "pages": [
     "pages/welcome/welcome",
     "pages/posts/post",
-    "pages/posts/post-detail/post-detail"  
+    "pages/posts/post-detail/post-detail",
+    "pages/movies/movies"
   ],
+
+  "requiredBackgroundModes": ["audio"],
+
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#405f80",
     "navigationBarTitleText": "微信小程序",
     "navigationBarTextStyle": "white"
+  },
+
+  "tabBar": {
+    "borderStyle": "black",
+    "selectedColor": "#FF0000",
+    "list": [
+      {
+        "pagePath": "pages/posts/post",
+        "text": "阅读",
+        "iconPath": "images/tab/yuedu.png",
+        "selectedIconPath": "images/tab/yuedu_hl.png"
+      },
+      {
+        "pagePath": "pages/movies/movies",
+        "text": "电影",
+        "iconPath": "images/tab/dianying.png",
+        "selectedIconPath": "images/tab/dianying_hl.png"
+      }
+    ]
   }
 }
